src/objects/Territory_Rule__c.object
<CustomObject>
    <description>Specifies the criteria that an Account must match for the associated owner and territory to be applied</description>
    <fields>
        <fullName>Account_Lifecycle__c</fullName>
        <label>Account Lifecycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Active Customer</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>JDE Company</fullName>
                </value>
                <value>
                    <fullName>Purchasing Organization</fullName>
                </value>
                <value>
                    <fullName>Inactive Customer</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_Code_From__c</fullName>
        <label># Area Code - From</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Code_To__c</fullName>
        <label>#Area Code - To</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Owner__c</fullName>
        <formula>Assigned_Territory__r.Commercial_Territory_Owner__r.FirstName + &apos; &apos; +Assigned_Territory__r.Commercial_Territory_Owner__r.LastName</formula>
        <label>Assigned Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Territory</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Territory Rules</relationshipLabel>
        <relationshipName>Territory_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Beds_From__c</fullName>
        <label># Beds - From</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beds_To__c</fullName>
        <label># Beds - To</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drinks_From__c</fullName>
        <label># Drinks - From</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drinks_To__c</fullName>
        <label># Drinks - To</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employees_From__c</fullName>
        <label># Employees - From</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employees_To__c</fullName>
        <label># Employees - To</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Code_From__c</fullName>
        <label>Industry Code - From</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Code_To__c</fullName>
        <label>Industry Code - To</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_From__c</fullName>
        <label>Postal Code - From</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_To__c</fullName>
        <label>Postal Code - To</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seats_From__c</fullName>
        <label># Seats - From</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seats_To__c</fullName>
        <label># Seats - To</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory Model</label>
        <referenceTo>Territory_Model__c</referenceTo>
        <relationshipLabel>Territory Rules</relationshipLabel>
        <relationshipName>Territory_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visitors_From__c</fullName>
        <label># Visitors - From</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visitors_To__c</fullName>
        <label># Visitors - To</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Territory Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Lifecycle__c</columns>
        <columns>Territory_Model__c</columns>
        <columns>Postal_Code_From__c</columns>
        <columns>Postal_Code_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>DE</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Territory Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AreaCodeRange_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.ValidationRulesSettings__c.TerritoryRuleValidationRules__c, VALUE(Area_Code_From__c ) &gt; VALUE(Area_Code_To__c ))</errorConditionFormula>
        <errorMessage>Invalid Area Code Range</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BedRange_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.ValidationRulesSettings__c.TerritoryRuleValidationRules__c, VALUE(Beds_From__c ) &gt; VALUE(Beds_To__c))</errorConditionFormula>
        <errorMessage>Invalid Bed Range</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DrinksRange_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.ValidationRulesSettings__c.TerritoryRuleValidationRules__c, VALUE(Drinks_From__c) &gt; VALUE(Drinks_To__c))</errorConditionFormula>
        <errorMessage>Invalid Drink Range</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EmployeesRange_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.ValidationRulesSettings__c.TerritoryRuleValidationRules__c, VALUE(Employees_From__c) &gt; VALUE(Employees_To__c))</errorConditionFormula>
        <errorMessage>Invalid Employees Range</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IndustryCodeRange_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.ValidationRulesSettings__c.TerritoryRuleValidationRules__c, VALUE(Industry_Code_From__c) &gt; VALUE(Industry_Code_To__c))</errorConditionFormula>
        <errorMessage>Invalid IndustryCode Range</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Industry_Code_Number_Only_and_Length_4</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.ValidationRulesSettings__c.TerritoryRuleValidationRules__c, OR(IF( NOT(ISBLANK(Industry_Code_From__c)), 
NOT(
AND(
LEN(Industry_Code_From__c) == 4, ISNUMBER(Industry_Code_From__c) )
), false),
IF( NOT(ISBLANK(Industry_Code_To__c)), 
NOT(
AND(
LEN(Industry_Code_To__c) == 4, ISNUMBER(Industry_Code_To__c) )
), false))
)</errorConditionFormula>
        <errorMessage>Industry Code should be 4 digits and only numbers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PostalCodeRange_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.ValidationRulesSettings__c.TerritoryRuleValidationRules__c, VALUE(Postal_Code_From__c) &gt; VALUE(Postal_Code_To__c))</errorConditionFormula>
        <errorMessage>Invalid Postal Code Range</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Postal_Code_Number_Only_and_Max_Length_5</fullName>
        <active>true</active>
        <description>Postal Code is only numbers and max 5 digits</description>
        <errorConditionFormula>AND($Setup.ValidationRulesSettings__c.TerritoryRuleValidationRules__c, OR(IF( NOT(ISBLANK(Postal_Code_From__c)), 
NOT( 
AND( 
LEN(Postal_Code_From__c) &lt;= 5, ISNUMBER(Postal_Code_From__c) ) 
), false),
IF( NOT(ISBLANK(Postal_Code_To__c)), 
NOT( 
AND( 
LEN(Postal_Code_To__c) &lt;= 5, ISNUMBER(Postal_Code_To__c) ) 
), false))
)</errorConditionFormula>
        <errorMessage>Postal code should be only numbers and max 5 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SeatsRange_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.ValidationRulesSettings__c.TerritoryRuleValidationRules__c, VALUE(Seats_From__c) &gt; VALUE(Seats_To__c))</errorConditionFormula>
        <errorMessage>Invalid Seat Range</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VisitorsRange_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.ValidationRulesSettings__c.TerritoryRuleValidationRules__c, VALUE(Visitors_From__c) &gt; VALUE(Visitors_To__c))</errorConditionFormula>
        <errorMessage>Invalid Visitor Range</errorMessage>
    </validationRules>
</CustomObject>